rust/crates/rax/src/string/rules/snapshots/rax__string__rules__until_one_in_char_set__tests__ascii_keep_right_not_first_char.snap
---
source: crates/rax/src/string/rules/until_one_in_char_set.rs
expression: result
---
Ok(
    (
        "abc",
        "1def",
    ),
)
