rust/crates/rax/src/string/rules/snapshots/rax__string__rules__until_one_in_char_set__tests__discard.snap
---
source: crates/rax/src/string/rules/until_one_in_char_set.rs
expression: result
---
Ok(
    (
        "abc",
        "def",
    ),
)
