rust/crates/rax/src/string/rules/snapshots/rax__string__rules__until_one_in_char_set__tests__keep_right_first_char.snap
---
source: crates/rax/src/string/rules/until_one_in_char_set.rs
expression: result
---
Ok(
    (
        "",
        "a123",
    ),
)
